--- a/templates/Products/products_list.html
+++ b/templates/Products/products_list.html
@@ -134,7 +134,7 @@
 						</div><!--/price-range-->
 
 						<div class="shipping text-center"><!--shipping-->
-							<img src="images/home/shipping.jpg" alt="">
+							<img src="{% static 'images/home/shipping.jpg' %}" alt="">
 						</div><!--/shipping-->
 
 					</div>
