--- a/templates/includes/products_list_partial.html
+++ b/templates/includes/products_list_partial.html
@@ -20,7 +20,7 @@
         </div>
         <div class="choose">
             <ul class="nav nav-pills nav-justified">
-                <li><a href=""><i class="fa fa-plus-square"></i>لیست علاقه مندی ها</a></li>
+                <li><a href="{% url 'products-details' slug=product.slug %}"><i class="fa fa-plus-square"></i>مشاهده جزییات</a></li>
                 <li><a href=""><i class="fa fa-plus-square"></i>مقایسه</a></li>
             </ul>
         </div>
