--- a/templates/header_render_partial/header_partial.html
+++ b/templates/header_render_partial/header_partial.html
@@ -94,7 +94,7 @@
                                     </ul>
                                 </li>
 								<li><a href="About.html">درباره مـا</a></li>
-								<li><a href="{% url 'Contact-page' %}">تماس با مـا</a></li>
+								<li><a href="{% url 'contact-us' %}">تماس با مـا</a></li>
 							</ul>
 						</div>
 					</div>
