--- a/templates/contact_page/contact-us.html
+++ b/templates/contact_page/contact-us.html
@@ -12,7 +12,25 @@
 	    				<div class="status alert alert-success" style="display: none"></div>
 				    	<form id="main-contact-form" class="contact-form row" name="contact-form" method="post">
                             {% csrf_token %}
-                            {{ contact_form }}
+
+                            <div class="form-group col-md-6">
+                                {{ contact_form.email.label_tag }}
+                                {{ contact_form.email }}
+                            </div>
+
+                            <div class="form-group col-md-6 {% if contact_form.fullname.errors %} text-danger {% endif %}">
+                                {{ contact_form.fullname.label_tag }}
+                                {{ contact_form.fullname }}
+                                {{ contact_form.fullname.error_messages }}
+                            </div>
+
+                            <div class="form-group col-md-12">
+                                {{ contact_form.subject }}
+                            </div>
+
+                            <div class="form-group col-md-12">
+                                {{ contact_form.message }}
+                            </div>
 
 {#				            <div class="form-group col-md-6">#}
 {#				                <input type="text" name="name" class="form-control" required="required" placeholder="نام">#}
@@ -26,9 +44,9 @@
 {#				            <div class="form-group col-md-12">#}
 {#				                <textarea name="message" id="message" required="" class="form-control" rows="8" placeholder="پیغـام شمـا"></textarea>#}
 {#				            </div>#}
-{#				            <div class="form-group col-md-12">
-{#				                <input type="submit" name="submit" class="btn btn-primary pull-right" value="ارسـال">
-{#				            </div>
+                            <div class="form-group col-md-12">
+				                <input type="submit" name="submit" class="btn btn-primary pull-right" value="ارسـال">
+				            </div>
 				        </form>
 	    			</div>
 	    		</div>
