--- a/templates/shared/index.html
+++ b/templates/shared/index.html
@@ -3,6 +3,9 @@
 
 
 {% block content %}
+{#    {{ message }}#}
+{#    <br>#}
+{#    {{ data }}#}
     <section id="slider"><!--slider-->
 		<div class="container">
 			<div class="row">
