--- a/templates/header_render_partial/header_partial.html
+++ b/templates/header_render_partial/header_partial.html
@@ -45,7 +45,7 @@
 					<div class="col-sm-8 header-middle-menu">
 						<div class="shop-menu pull-right">
 							<ul class="nav navbar-nav">
-								<li><a href="#"><i class="fa fa-user"></i> حساب کاربـری</a></li>
+								<li><a href="{% url 'RegisterForm' %}"><i class="fa fa-user"></i> حساب کاربـری</a></li>
 								<li><a href="#"><i class="fa fa-star"></i> لیست علاقه مندی ها</a></li>
 								<li><a href="login.html"><i class="fa fa-lock"></i> ورود</a></li>
 								<li><a href="cart.html"><i class="fa fa-shopping-cart"></i> سبد خریـد</a></li>
@@ -84,7 +84,7 @@
 										<li><a href="product-details.html">جزئیات محصولات</a></li>
 										<li><a href="checkout.html">پرداخت</a></li>
 										<li><a href="cart.html">سبـد خریـد</a></li>
-										<li><a href="login.html">ورود</a></li>
+										<li><a href="">ورود</a></li>
                                     </ul>
                                 </li>
 								<li class="dropdown"><a href="#">اخبـار<i class="fa fa-angle-down"></i></a>
