--- a/templates/Products/product-details.html
+++ b/templates/Products/product-details.html
@@ -5,10 +5,16 @@
 {% block title %}جزییات محصول{% endblock %}
 
 {% block content %}
+    {% if is_favorite %}
+        <div class="col-md-12">
+            <p>
+                این محصول به لیست علاقه مندی ها اضافه شد
+            </p>
+        </div>
+    {% endif %}
     <section>
         <div class="container">
             <div class="row">
-
                 <div class="col-sm-9 padding-right">
                     <div class="product-details"><!--product-details-->
                         <div class="col-sm-5">
@@ -27,6 +33,8 @@
                                     </div>
                                     <div class="item">
                                         <a href=""><img src="
+
+
                                                 {% static 'images/product-details/similar1.jpg' %}{% static 'images/product-details/similar1.jpg' %}"
                                                         alt=""></a>
                                         <a href=""><img src="{% static 'images/product-details/similar2.jpg' %}" alt=""></a>
@@ -66,7 +74,8 @@
 
                                         <form action="{% url 'products-favorite' %}" method="post">
                                             {% csrf_token %}
-										    <input type="hidden" name="product_id" value="{{ product.id }}" class="search_box">
+										    <input type="hidden" name="product_id" value="{{ product.id }}"
+                                                   class="search_box">
 										    <button type="submit" class="btn btn-fefault cart">
 											    <i class="fa fa-shopping-cart"></i>
 											         ثبت محصول به عنوان کالا محبوب
@@ -77,7 +86,7 @@
                                 <div>
                                     <p><b>موجـودی :</b> در انبـار موجود می باشد</p>
                                     <p><b>شرایـط :</b> جدیـد</p>
-                                    {% if products.Brand %}
+                                    {% if product.Brand %}
                                         <p><b>برنـد :</b>{{ product.Brand.title }}</p>
                                     {% endif %}
                                 </div>
