--- a/templates/Products/products_list.html
+++ b/templates/Products/products_list.html
@@ -21,11 +21,22 @@
 						{% endfor %}
                         <div class="clearfix"></div>
                         <ul class="pagination">
-							<li class="active"><a href="">1</a></li>
-							<li><a href="">2</a></li>
-							<li><a href="">3</a></li>
-							<li><a href="">»</a></li>
-						</ul>
+{#							<li class="active"><a href="">1</a></li>#}
+{#							<li><a href="">2</a></li>#}
+{#							<li><a href="">3</a></li>#}
+{#							<li><a href="">»</a></li>#}
+                        {% if page_obj.has_previous %}
+                        	<li><a href="?page={{ page_obj.previous_page_number }}">قبلی</a></li>
+                        {% endif %} 
+                    
+                        {% for pageNumber in paginator.page_range %}
+                            <li><a href="?page={{ pageNumber }}">{{ pageNumber }}</a></li>
+                        {% endfor %}
+
+                        {% if page_obj.has_next %}
+                        	<li><a href="?page={{ page_obj.next_page_number }}">بعدی</a></li>
+                        {% endif %}
+                        </ul>
 					</div><!--features_items-->
 				</div>
 				<div class="col-sm-3">
