--- a/templates/header_render_partial/header_partial.html
+++ b/templates/header_render_partial/header_partial.html
@@ -47,7 +47,7 @@
 							<ul class="nav navbar-nav">
 								<li><a href="{% url 'RegisterForm' %}"><i class="fa fa-user"></i> حساب کاربـری</a></li>
 								<li><a href="#"><i class="fa fa-star"></i> لیست علاقه مندی ها</a></li>
-								<li><a href="login.html"><i class="fa fa-lock"></i> ورود</a></li>
+								<li><a href="{% url 'LoginForm' %}"><i class="fa fa-lock"></i> ورود</a></li>
 								<li><a href="cart.html"><i class="fa fa-shopping-cart"></i> سبد خریـد</a></li>
 							</ul>
 						</div>
