--- a/templates/Accounts/login_page.html
+++ b/templates/Accounts/login_page.html
@@ -14,16 +14,15 @@
 						<form action="{% url 'LoginForm' %}" method="post">
                             {% csrf_token %}
 
-                        {# email --> #}
                             {{ login_form.email.label_tag }}
                             {{ login_form.email }}
                             {{ login_form.email.error_messages }}
-                            {# <-- #}
-                        {# password --> #}
+
                             {{ login_form.password.label_tag }}
                             {{ login_form.password }}
                             {{ login_form.password.error_messages }}
-                            {# <-- #}
+
+                            <p><a href="{% url 'ForgotPage' %}">فراموشی کلمه عبور</a></p>
 							<button type="submit" class="btn btn-default">ورود</button>
 						</form>
 					</div><!--/sign up form-->
