--- a/templates/contact_page/contact-us.html
+++ b/templates/contact_page/contact-us.html
@@ -3,6 +3,7 @@
 {% block title %} تماس با ما {% endblock %}
 
 {% block content %}
+    salam raha
     <div id="contact-page" class="container">
         <div class="bg">
             <div class="row">
