--- a/templates/footer_render_partial/footer_partial.html
+++ b/templates/footer_render_partial/footer_partial.html
@@ -30,9 +30,9 @@
 					</div>
 					<div class="col-sm-6">
 						<div class="companyinfo">
-							<h2><span>SHOP</span>CENTER</h2>
+							<h2><span>{{ site_setting.site_name }}</span></h2>
 							<h4>درباره ما :</h4>
-							<p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده ازلورملورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد.</p>
+							<p>{{ site_setting.about_us_text }}</p>
 						</div>
 					</div>
 				</div>
