--- a/templates/header_render_partial/header_partial.html
+++ b/templates/header_render_partial/header_partial.html
@@ -45,8 +45,8 @@
 					<div class="col-sm-8 header-middle-menu">
 						<div class="shop-menu pull-right">
 							<ul class="nav navbar-nav">
+								<li><a href="/admin"><i class="fa fa-user"></i>پنل ادمین</a></li>
 								<li><a href="{% url 'RegisterForm' %}"><i class="fa fa-user"></i> حساب کاربـری</a></li>
-								<li><a href="#"><i class="fa fa-star"></i> لیست علاقه مندی ها</a></li>
 								<li><a href="{% url 'LoginForm' %}"><i class="fa fa-lock"></i> ورود</a></li>
 								<li><a href="cart.html"><i class="fa fa-shopping-cart"></i> سبد خریـد</a></li>
 							</ul>
@@ -87,12 +87,7 @@
 										<li><a href="">ورود</a></li>
                                     </ul>
                                 </li>
-								<li class="dropdown"><a href="#">اخبـار<i class="fa fa-angle-down"></i></a>
-                                    <ul role="menu" class="sub-menu">
-                                        <li><a href="blog.html">آخریـن اخبـار</a></li>
-										<li><a href="blog-single.html">صفحـه خبـر</a></li>
-                                    </ul>
-                                </li>
+								<li class="dropdown"><a href="{% url 'articles_list' %}">مقاله ها</a></li>
 								<li><a href="About.html">درباره مـا</a></li>
 								<li><a href="{% url 'contact-us' %}">تماس با مـا</a></li>
 							</ul>
